<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/parentClient"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edtNameClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        android:inputType="text"
        android:labelFor="@+id/profile_name" />

    <EditText
        android:id="@+id/edtSurnameClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/surnames"
        android:inputType="text"
        android:labelFor="@+id/profile_cif" />

    <EditText
        android:id="@+id/edtAddressClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_cif"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/location"
        android:inputType="text"
        android:labelFor="@+id/profile_location" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_location"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:labelFor="@+id/profile_phone" />


    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save"
        />

</LinearLayout>