<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="25dp"
    android:id="@+id/parentCites"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/date"
        android:inputType="date"
        android:labelFor="@+id/profile_name" />

    <EditText
        android:id="@+id/edtTimeStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/timeStart"
        android:inputType="time"
        android:labelFor="@+id/profile_cif" />

    <EditText
        android:id="@+id/edtTimeEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_cif"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/timeEnd"
        android:inputType="time"
        android:labelFor="@+id/profile_location" />

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveCite"
        android:text="@string/save"
        />

</LinearLayout>