<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/business"
            android:id="@+id/btnPreferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/clients"
            android:id="@+id/btnClien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_marginTop="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cites"
            android:id="@+id/btnCites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>